apps/base/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https-minas
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: traefik-dashboard-https-node1
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.saldivar.io`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
      services:
        - kind: TraefikService
          name: api@internal
  placement:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - minas-tirith
                  - minas-tirith-vm

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https-pelargir
  namespace: kube-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: traefik-dashboard-https-node2
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.pelargir.saldivar.io`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
      services:
        - kind: TraefikService
          name: api@internal
  placement:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - pelargir
                  - pelargir-vm
